--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,5 +38,8 @@
 
         Получив эту специальность, ты сможешь заниматься разработкой баз данных, дизайна веб- и мультимедиа приложений, администрированием баз данных и серверов. Данная специальность, входящая в ТОП-50 профессий, самых востребованных на рынке труда, позволит применять полученные знания в области разработки и интеграции программных модулей, ревьюирования программного обеспечения.
         </string>
+        <string name="code">
+                <b>09.02.07 Информационные системы и программирование</b>
+        </string>
 
 </resources>
