Работа над тестами

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,18 @@
 
         <!-- Для фрагмента о специальности -->
         <string name="large_text_about_speciality">
+                КОМПЕТЕНЦИИ БУДУЩЕГО, КОТОРЫЕ ВЫ ПРИОБРЕТЕТЕ НА ЛЮБОЙ СПЕЦИАЛЬНОСТИ: \n\n
+- Быть крос-функциональным, работать на стыке профессий\n
+- Уметь работать удаленно\n
+- Быть профессионалом big data – уметь собирать и распоряжаться большим объемом информации\n
+- Быть «универсальным солдатом»: знать иностранные языки, уметь творчески мыслить, обладать soft skills\n
+- Уметь самообучаться: развитие IT-технологий будет стремительным\n\n
+Дополнительная информация:\n
+1. Право поступления на места, объявленные для конкурса и финансируемые из средств федерального бюджета, имеют граждане Российской Федерации.\n
+
+2. Прием в колледж на обучение по образовательным программам проводится без экзаменов по рейтингу среднего балла аттестатов*.\n
+
+3. Перевод из других средних профессиональных учебных заведений проводится в течение учебного года.\n\n
                 Форма обучения: Очная\n\n
 
         Квалификация: программист / разработчик веб и мультимедийных приложений / специалист по информационным системам / специалист по информационным ресурсам / технический писатель\n\n
@@ -40,6 +52,43 @@
         </string>
         <string name="code">
                 <b>09.02.07 Информационные системы и программирование</b>
+        </string>
+        <string name="description_of_the_educational_program">
+                <b>09.02.07 Информационные системы и программирование</b>
+        </string>
+        <string name="NameOfTitle1">
+                <b>Описание образовательной программы</b>
+        </string>
+        <string name="information_of_ISP_01">
+                <u>09.02.07 Информационные системы и программирование (квалификация: разработчик веб и мультимедийных приложений)(2024)</u>
+        </string>
+        <string name="information_of_ISP_02">
+                <u>09.02.07 Информационные системы и программирование (квалификация: программист) (2023)</u>
+        </string>
+        <string name="information_of_ISP_03">
+                <u>09.02.07 Информационные системы и программирование (квалификация: разработчик веб и мультимедийных приложений) (2023) </u>
+        </string>
+        <string name="information_of_ISP_04">
+                <u>09.02.07 Информационные системы и программирование (квалификация: программист)</u>
+        </string>
+        <string name="information_of_ISP_05">
+                <u>09.02.07 Информационные системы и программирование (квалификация: разработчик веб и мультимедийных приложений) </u>
+        </string>
+        <string name="NameOfTitle2">
+                <b>Учебный план</b>
+        </string>
+        <string name="information_of_ISP_06">
+                <u>09.02.07 Информационные системы и программирование (квалификация: разработчик веб и мультимедийных приложений) 2024</u>
+        </string>
+        <string name="NameOfTitle3">
+                <b>Программы практик</b>
+        </string>
+        <string name="information_of_ISP_07">
+                <u>09.02.07 Информационные системы и программирование </u>
+        </string>
+
+        <string name="TestFoAbiturient">
+                <b>Тестирование</b>
         </string>
 
 </resources>
