--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,4 +91,10 @@
                 <b>Тестирование</b>
         </string>
 
+        <string name="TxtFoAbiturient">
+                Этот тест поможет абитуриентам колледжа оценить свой уровень знаний по ключевым техническим дисциплинам — программированию, математике и основам физики, которые часто требуются для поступления на IT-специальности.\n
+                        Он позволяет проверить логическое мышление и аналитические способности, что особенно важно для будущих программистов и IT-специалистов.\n
+                        В конечном счете, тест — это отличный способ подготовиться к обучению в колледже и убедиться в своем интересе к техническим наукам.
+        </string>
+
 </resources>
