Работает отправка писем

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -96,5 +96,6 @@
                         Он позволяет проверить логическое мышление и аналитические способности, что особенно важно для будущих программистов и IT-специалистов.\n
                         В конечном счете, тест — это отличный способ подготовиться к обучению в колледже и убедиться в своем интересе к техническим наукам.
         </string>
+    <string name="title_activity_maps">MapsActivity</string>
 
 </resources>
