Осталось:просмотр истории тестов, добавление материалов и соц.сети

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -97,5 +97,34 @@
                         В конечном счете, тест — это отличный способ подготовиться к обучению в колледже и убедиться в своем интересе к техническим наукам.
         </string>
     <string name="title_activity_maps">MapsActivity</string>
+        <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+        <string name="Map">
+                <b>МГУТУ имени К.Г. Разумовского, университетский колледж информационных технологий</b>
+        </string>
+        <string name="Priemka">
+                ВОПРОСЫ ПО ПОСТУПЛЕНИЮ\n\n
+                        1. Как выстраивается рейтинг абитуриентов при зачислении?\n\n
+
+Если численность поступающих на бюджетные места превышает количество бюджетных мест в рамках контрольных цифр приема,  прием на обучение осуществляется на основе результатов освоения поступающими образовательной программы основного общего образования, указанных в представленных поступающими документах об образовании (конкурс аттестатов об основном общем образовании) (пункт 7.3 Правил приема).\n
+
+2. До какого числа возможно зачисление, если я опоздал подать документы в августе?\n\n
+
+Прием документов в Университет на основные образовательные программы среднего профессионального образования при наличии свободных мест может продлеваться до 25 ноября текущего года (пункт 4.1 Правил приема).\n
+
+3. Как ранжируются абитуриенты в рейтинге в случае равенства среднего балла?\n\n
+
+При равенстве баллов аттестатов, приемная комиссия производит ранжирование абитуриентов в следующем порядке (пункт 7.7 Правил приема):\n\n
+
+1) наличие договора о целевом обучении;\n\n
+
+2)  наличие результатов индивидуальных достижений;\n\n
+
+3) средний балл выставленных в аттестат отметок по профильным для специальности, на которую поступает абитуриент, предметам;\n\n
+
+4) средний балл, полученный абитуриентом на государственной итоговой аттестации по программам основного общего (ОГЭ) или среднего общего (ЕГЭ) образования;\n\n
+
+Свои вопросы присылайте на электронную почту priem.ukit@mgutm.ru
+        </string>
 
 </resources>
