Основное сделано, остались соц.сети и звонок

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -126,5 +126,16 @@
 
 Свои вопросы присылайте на электронную почту priem.ukit@mgutm.ru
         </string>
-
+        <string name="WantBeAdmin">
+                <b>Для получения доступа к правам администратора и возможности совершать действия по редактированию тестов, а так же добавлению новых материалов, необходимо получить права админа, запрос обрабатывается в течении 1 часа.</b>
+        </string>
+        <string name="AlreadyAdmin">
+                Если у вас есть права админа, то выберите действие:
+        </string>
+        <string name="InfoOn2025">
+               <b> Материалы на текущий учебный год</b>
+        </string>
+        <string name="Info2025">
+                <u>Материалы на текущий учебный год</u>
+        </string>
 </resources>
