Исправила коментарии и добавила почту в шапку+ исправила грам.ошибку

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,7 @@
         <!-- Для фрагмента о специальности -->
         <string name="large_text_about_speciality">
                 КОМПЕТЕНЦИИ БУДУЩЕГО, КОТОРЫЕ ВЫ ПРИОБРЕТЕТЕ НА ЛЮБОЙ СПЕЦИАЛЬНОСТИ: \n\n
-- Быть крос-функциональным, работать на стыке профессий\n
+- Быть кросс-функциональным, работать на стыке профессий\n
 - Уметь работать удаленно\n
 - Быть профессионалом big data – уметь собирать и распоряжаться большим объемом информации\n
 - Быть «универсальным солдатом»: знать иностранные языки, уметь творчески мыслить, обладать soft skills\n
